# decenchat-server

./: .dockerignore  .env  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  index.js  package.json
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: client-bug.md  server-issue.md
.github/workflows/: build_rust.yml  publish_docker.yml
assets/: details.json  details.template.json  emoji.json  roles.json
assets/legal/: privacypolicy.md
nginx/: nginx.conf
sql/: createtable.sql  init.sql
src/: main.rs  members.rs  server.rs
src/admin/: mod.rs
src/db/: db_postgres.rs  mod.rs
src/db/action/member/: mod.rs
src/storage/: mod.rs  storage_s3.rs
