[package]
name = "decensha-server"
version = "0.0.0"
edition = "2021"
authors = ["leafstudiosDot"]
description = "Decentralized Chatroom Server"
readme = "./README.md"
license-file = "./LICENSE.md"
repository = "https://github.com/leafstudiosDot/decensha"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
env_logger = "0.10.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"