[package]
name = "decensha"
version = "0.0.1"
edition = "2021"
authors = ["leafstudiosDot"]
description = "Decentralized Chatroom Server"
readme = "./README.md"
license-file = "./LICENSE.md"
repository = "https://github.com/leafstudiosDot/decensha"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-http = "3.3.1"
actix-rt = "2.8.0"
actix-server = "2.2.0"
actix-service = "2.0.2"
actix-web = "4.3.1"
actix-cors = "0.6.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
postgres = "0.19.5"
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
webrtc = "0.8.0"
rustls = "0.21.6"
rustls-pemfile = "1.0.3"
x509-parser = "0.15.0"
openssl = "0.10.66"
regex = "1.5"
bcrypt = "0.15.0"

[build]
incremental = true